recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:13: error: not found: value level
	if (level==0) {avance(length)}
            ^Sierpinski:13: error: not found: value length
	if (level==0) {avance(length)}
                              ^Sierpinski:14: error: not found: value levels
	else {sierpinski(levels-1, length/2)}
                         ^